# Theorem

./: .gitbook.yaml  .gitignore  AGENTS.md  CLAUDE.md  README.md  checklist.md  pyproject.toml  theorem-agentd.toml
apps/browser/: Cargo.toml  README.md  rust-toolchain.toml  servo-build.Dockerfile
apps/browser-substrate/: Cargo.toml
apps/browser-substrate/src/: lib.rs
apps/browser-substrate/tests/: persistence.rs
apps/browser/src/: main.rs
apps/commonplace-api/: Cargo.toml  Dockerfile  railway.toml
apps/commonplace-api/src/: auth.rs  briefing.rs  discover.rs  lib.rs  main.rs  mcp.rs  organize.rs  portability.rs  repo_connect.rs  retrieve.rs  schema.rs  serve.rs
apps/commonplace-api/tests/: durable_http_acceptance.rs  durable_mcp_acceptance.rs  f3_api_acceptance.rs  i1_ask_acceptance.rs  i2_briefing_acceptance.rs  i4_discovery_acceptance.rs  mcp_stdio_acceptance.rs  organize_acceptance.rs  repo_connect_acceptance.rs  x2_portability_acceptance.rs  zz_float_roundtrip_probe.rs  zz_recover_debug.rs
apps/commonplace-desktop-runtime/: Cargo.toml  IMPLEMENTATION.md
apps/commonplace-desktop-runtime/src/: authorization.rs  control.rs  discovery.rs  lib.rs  pairing.rs  passes.rs  presence.rs  process_executor.rs  programmable.rs  relay.rs  runs.rs  sink.rs
apps/commonplace-desktop-runtime/tests/: ambient_passes.rs  connectivity.rs  data_routes.rs  ingest_sink.rs  presence_channel.rs  run_channel.rs  spawn_watcher.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/jobintel/: Cargo.toml  README.md  slugs.toml
apps/jobintel/profiles/: travis.toml
apps/jobintel/src/: client.rs  config.rs  error.rs  main.rs  model.rs  profile.rs
apps/jobintel/tests/: client_http.rs  outreach_seams.rs
apps/rustyred-embedded/: Cargo.toml
apps/rustyred-embedded/src/: lib.rs  main.rs
apps/rustyred-embedded/tests/: stdio.rs
apps/rustyred-fuse/: Cargo.toml
apps/rustyred-fuse/src/: lib.rs
apps/rustyred-git/: Cargo.toml
apps/rustyred-git/src/: lib.rs
apps/rustyred-workspace/: Cargo.toml
apps/rustyred-workspace/src/: lib.rs
apps/theorem-federation/: Cargo.toml  README.md
apps/theorem-federation/src/: blob.rs  delta.rs  driver.rs  gossip.rs  identity.rs  lib.rs  main.rs  transport.rs  trust.rs
apps/theorem-federation/tests/: federation_contract.rs  federation_network.rs
apps/theorem-gateway/: Cargo.toml  Dockerfile  README.md  build.rs  railway.toml  schema.graphql
apps/theorem-gateway/src/: cache.rs  clients.rs  config.rs  main.rs  middleware.rs  pb.rs  scene_serve.rs
apps/theorem-grpc/: Cargo.toml  Dockerfile  README.md  build.rs  railway.toml
apps/theorem-grpc/src/: app_affordance.rs  code_index.rs  code_kg.rs  code_service.rs  engine.rs  main.rs  pb.rs  service.rs  session_delta.rs  valkey_cache.rs
apps/theorem-harness-node/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  recover.mjs  smoke.mjs  stream.mjs
apps/theorem-harness-node/src/: lib.rs
apps/theorem-harness-server/: Cargo.toml  Dockerfile  railway.toml
apps/theorem-harness-server/src/: github.rs  github_app.rs  lib.rs  main.rs  openapi.rs  push.rs
apps/theorem-proxy/: Cargo.toml  README.md
apps/theorem-proxy/scripts/: RustyRed-Codex.command  agent-room-participants-env.sh  install.sh  node-local.sh  provider-cache-smoke.sh  seed-node.py  start-desktop-gateway.sh  start-proxied-codex-app.sh  start-proxied-codex-session.sh  start-proxied-session.sh  valkey-local.sh
apps/theorem-proxy/src/: inject.rs  lib.rs  main.rs  membrane.rs  memory.rs
apps/theorem-proxy/tests/: doctor.rs  membrane.rs  passthrough.rs  substrate_memory.rs  wrap.rs
apps/theorem-substrate-sync/: Cargo.toml  README.md
apps/theorem-substrate-sync/src/: bootstrap.rs  config.rs  cursor.rs  drainer.rs  lib.rs  main.rs  outbox.rs  railway_client.rs  round.rs  scheduler.rs  status.rs  subscriber.rs
apps/theorem-substrate-sync/tests/: end_to_end.rs  http_contract.rs
rustyredcore_THG/: .dockerignore  .gitignore  .railwayignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  railway.toml
rustyredcore_THG/benchmarks/prose/: README.md  prompts.json  run.py
rustyredcore_THG/crates/commonplace/: Cargo.toml  README.md
rustyredcore_THG/crates/design-check/: Cargo.toml  README.md
rustyredcore_THG/crates/ensemble/: Cargo.toml  README.md
rustyredcore_THG/crates/pilot-core/: Cargo.toml  README.md
rustyredcore_THG/crates/prose-check/: Cargo.toml  README.md
rustyredcore_THG/crates/reconstruction-engine/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-code-embedding/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-hipporag/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-membrane/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-plugin/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-proxy/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-rerank/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-adapters/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-affordances/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-behavior-ir/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-binformat/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-catalog/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-code/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-compat-server/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-connectors/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-core/: Cargo.toml  README.md
rustyredcore_THG/crates/rustyred-thg-datawave/: Cargo.toml  (+1 more)
rustyredcore_THG/hooks/: carry-capture.sh  carry-local.sh  carry-serve.sh  session_start.sh
rustyredcore_THG/src/: adapters.rs  bgi.rs  cmh.rs  graph_export.rs  lib.rs  push_ppr.rs  search_kernel.rs  thg.rs
rustyredcore_THG/tests/: test_benchmarks.py  test_bgi_parity.py  test_cmh_parity.py  test_datalog_derivation_parity.py  test_evolution_parity.py  test_export_contract.py  test_graph_export.py  test_parity.py  test_search_kernel.py  test_smoke.py
(+1586 files in other folders)
