# Packaging for the repo-root `perception_visual` package (license-clean visual
# GUI perception). This file is intentionally scoped to that one package via
# `[tool.setuptools.packages.find].include`, so it is inert to the rest of this
# Cargo-centric monorepo. The package also runs without install, via
# `python -m perception_visual.<module>` from the repo root.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perception-visual"
version = "0.1.0"
description = "License-clean OmniParser-style visual GUI perception (RF-DETR detector, no Ultralytics/AGPL)."
readme = "perception_visual/README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Theorem" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
detect = ["rfdetr"]                                   # Apache-2.0 RF-DETR (production detector)
caption = ["transformers>=4.42", "torch", "pillow"]   # Florence-2 (MIT) captioner
ocr = ["easyocr"]                                     # Apache-2.0 OCR
serve = ["fastapi>=0.110", "uvicorn>=0.29", "pillow", "pydantic>=2"]
data = ["playwright>=1.44"]                           # accessibility-tree dataset capture
dev = ["pytest>=8", "httpx", "pillow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["perception_visual*"]

[tool.setuptools.package-data]
"perception_visual.eval" = ["fixtures/heldout/gt.json", "fixtures/heldout/images/*.png"]
"perception_visual.tests" = ["fixtures/*.png"]

[tool.pytest.ini_options]
testpaths = ["perception_visual/tests"]
